Fix bugs.
Horizontal scrolling bug of Micro Economics subject and navigation content covering bug as well as back to top button bug. Move utility classes to utility file.

--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -3,6 +3,60 @@
 .container {
     width: 90%;
     margin: 0 auto;
+    max-width: 1600px;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.highlight {
+    color: var(--red);
+    background-color: transparent;
+}
+
+.optional-text {
+    color: var(--optional);
+}
+
+.highlight-rule {
+    color: var(--highlight-rule);
+}
+
+.question-section {
+    text-align: center;
+    margin-block: 1.5rem;
+}
+
+.responsive-table {
+    overflow-x: auto;
+    margin-bottom: 1rem;
+}
+
+.individual-question {
+    margin-bottom: 10px;
+
+    & a {
+        text-decoration: none;
+    }
+}
+
+.back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: var(--red);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    & a {
+        color: var(--white);
+        text-decoration: none;
+    }
 }
 
 // <---------------------------- WHITE SPACING ------------------------------->#
