--- a/src/sass/pages/_index.scss
+++ b/src/sass/pages/_index.scss
@@ -15,11 +15,6 @@ p {
     margin-bottom: 1.5rem;
 }
 
-.question-section {
-    text-align: center;
-    margin-block: 1.5rem;
-}
-
 table {
     border-collapse: collapse;
     width: 100%;
@@ -40,55 +35,7 @@ tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 
-.text-center {
-    text-align: center;
-}
-
-.responsive-table {
-    overflow-x: auto;
-    margin-bottom: 1rem;
-}
-
-.individual-question {
-    margin-bottom: 10px;
-
-    & a {
-        text-decoration: none;
-    }
-}
-
 ol.custom-list {
     list-style-type: decimal;
     padding-left: 1.4rem;
-}
-
-.highlight {
-    color: var(--red);
-    background-color: transparent;
-}
-
-.optional-text {
-    color: var(--optional);
-}
-
-.highlight-rule {
-    color: var(--highlight-rule);
-}
-
-.back-to-top {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: var(--red);
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    & a {
-        color: var(--white);
-        text-decoration: none;
-    }
 }
